--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     Esta calculadora ha sido diseñada considerando los siguientes supuestos para la mayoría de las transacciones:
                     <ul>
                         <li>La propiedad fue adquirida a partir del año 1995.</li>
-                        <li>El cálculo aplica para propiedades donde la construcción y el terreno se adquirieron juntos.</li>
-                        <li>Si adquiriste tu propiedad en 2013 o posterior, es fundamental que cuentes con el **Comprobante Fiscal Digital por Internet (CFDI)** de la compra para que la deducción sea válida.</li>
+                        <li>El cálculo aplica para propiedades donde la construcción y el terreno se adquirieron simultáneamente.</li>
+                        <li>Si adquiriste tu propiedad en 2013 o posterior, es fundamental que cuentes con el **(CFDI)** de la compra para que la deducción sea válida.</li>
                     </ul>
                 </p>
                 <p>
@@ -50,7 +50,7 @@
                         </label>
                     </div>
                     <p class="small-note">
-                        *La exención aplica si es casa habitación (una vez cada 5 años).
+                        *La exención aplica para casa habitación (una vez cada 3 años).
                     </p>
                 </div>
 
@@ -120,4 +120,5 @@
     </div>
     <script src="scripts.js"></script>
 </body>
+
 </html>
