--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div> <div class="contact-card">
             <h3>¿Necesitas asesoría precisa para la venta de tu propiedad?</h3>
             <p>
-                Recuerda, esta es una estimación. Para un cálculo definitivo y la mejor estrategia fiscal en la venta de tu casa, contáctanos.
+                Recuerda, esta es una estimación. Para un cálculo más preciso y mejorar la estrategia fiscal en la venta de tu casa, contáctanos.
             </p>
             <p class="contact-info">
                 📞 Llámanos o envíanos un WhatsApp:
@@ -122,3 +122,4 @@
 </body>
 
 </html>
+
